# graphql-code-generator-rust

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
crates/graphql-codegen-rust-cli/: Cargo.toml
crates/graphql-codegen-rust-cli/src/: cli.rs  codegen.rs  config.rs  generate_and_save.rs  hooks.rs  js_plugin_bridge.rs  load.rs  main.rs  relay_optimize.rs
crates/graphql-codegen-rust-cli/src/init/: helpers.rs  mod.rs  plugins.rs  questions.rs  targets.rs  types.rs
crates/graphql-codegen-rust-cli/src/local_plugins/: add.rs  flow.rs  graphql_files_modules.rs  introspection.rs  mod.rs  typescript_resolvers.rs
crates/graphql-codegen-rust-cli/src/local_plugins/flow/: resolvers.rs
crates/graphql-codegen-rust-cli/src/local_plugins/typescript_resolvers/: config.rs  visitor.rs
crates/graphql-codegen-rust-cli/src/utils/: debugging.rs  file_system.rs  get_latest_version.rs  logger.rs  mod.rs  watcher.rs
crates/graphql-tools-load/: Cargo.toml
crates/graphql-tools-load/src/: lib.rs  load.rs
crates/graphql-tools-load/src/utils/: debugging.rs
crates/plugin-fragment-matcher/: Cargo.toml
crates/plugin-fragment-matcher/src/: config.rs  index.rs  lib.rs
crates/plugin-helpers/: Cargo.toml
crates/plugin-helpers/src/: lib.rs  profiler.rs  schema_input.rs  types.rs  utils.rs
crates/plugin-typed-document-node/: Cargo.toml
crates/plugin-typed-document-node/src/: config.rs  index.rs  lib.rs  visitor.rs
crates/plugin-typescript/: Cargo.toml
crates/plugin-typescript-operations/: Cargo.toml
crates/plugin-typescript-operations/src/: config.rs  index.rs  lib.rs  ts_operation_variables_to_object.rs  ts_selection_set_processor.rs  ts_selection_set_to_object.rs  visitor.rs
crates/plugin-typescript-react-apollo/: Cargo.toml
crates/plugin-typescript-react-apollo/src/: config.rs  index.rs  lib.rs
crates/plugin-typescript/src/: config.rs  index.rs  introspection_visitor.rs  lib.rs  typescript_variables_to_object.rs  visitor.rs
crates/visitor-plugin-common/: Cargo.toml
crates/visitor-plugin-common/src/: client_side_base_visitor.rs  lib.rs  utils.rs
dev-test/: .prettierignore  codegen.ts  package-lock.json  package.json
