[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
apollo-compiler = "1.31.1"
clap = "4.6.1"
colored = "3.1.1"
inquire = "0.9.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
pathdiff = "0.2.3"
ureq = "3.3.0"
tokio = "1.52.1"
sha1 = "0.11.0"
base64 = "0.22.1"
glob = "0.3.3"
graphql-parser = "0.4.1"
dotenvy = "0.15.7"