[package]
name = "graphql-codegen-rust-cli"
version = "0.0.1"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
inquire = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
pathdiff = { workspace = true }
ureq = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sha1 = { workspace = true }
base64 = { workspace = true }
glob = { workspace = true }
graphql-parser = { workspace = true }
dotenvy = { workspace = true }
plugin-helpers = { path = "../plugin-helpers" }
plugin-typescript = { path = "../plugin-typescript" }
plugin-typescript-operations = { path = "../plugin-typescript-operations" }
plugin-typed-document-node = { path = "../plugin-typed-document-node" }
apollo-compiler = { workspace = true }
