[package]
name = "graphql-tools-load"
version = "0.0.1"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
apollo-compiler = { workspace = true }
globwalk = { workspace = true }
graphql-parser = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
plugin-helpers = { path = "../plugin-helpers" }
