[package]
name = "plugin-typed-document-node"
version = "0.0.1"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
graphql-parser = { workspace = true }
plugin-helpers = { path = "../plugin-helpers" }
visitor-plugin-common = { path = "../visitor-plugin-common" }

