[package]
name = "plugin-typescript-operations"
version = "0.0.1"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
graphql-parser = { workspace = true }
plugin-helpers = { path = "../plugin-helpers" }
plugin-typescript = { path = "../plugin-typescript" }
visitor-plugin-common = { path = "../visitor-plugin-common" }

