[package]
name = "plugin-typescript-react-apollo"
version = "0.0.1"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
plugin-helpers = { path = "../plugin-helpers" }
plugin-typescript-operations = { path = "../plugin-typescript-operations" }
visitor-plugin-common = { path = "../visitor-plugin-common" }
graphql-parser = { workspace = true }
