[package]
name = "visitor-plugin-common"
version = "0.0.1"
edition = { workspace = true }
description = "Rust port of @graphql-codegen/visitor-plugin-common (incremental)"

[dependencies]
anyhow = { workspace = true }
graphql-parser = { workspace = true }
plugin-helpers = { path = "../plugin-helpers" }
serde_json = { workspace = true, features = ["preserve_order"] }
